--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -38,11 +38,11 @@ permalink: /стационарные-страховочные-системы
 **Анкерные линии** – это индивидуальное спасательное средство при проведении высотной работы. Они являются компонентом основной системы безопасности. Состоят из закрепленного на опоре каната, стального троса или металлоконструкции, к которым могут быть присоединены остальные компоненты соединительной системы.
 
 **Установка анкерных линий** – важный момент при проведении высотных работ. Самые распространенные сферы их применения:  
-•	монтаж и сварка на значительной высоте;  
-•	обслуживание крупного производственного сооружения;  
-•	отделка или ремонт фасада высотного здания;  
-•	ремонт и установка кровли;  
-•	спуск в колодец и другие виды промышленного альпинизма.  
+*	монтаж и сварка на значительной высоте;  
+*	обслуживание крупного производственного сооружения;  
+*	отделка или ремонт фасада высотного здания;  
+*	ремонт и установка кровли;  
+*	спуск в колодец и другие виды промышленного альпинизма.  
 
 ### **Разновидности анкерных линий**    
 **Анкерные линии** различаются по типу размещения несущей конструкции: они бывают вертикальными и горизонтальными. Есть еще гибкие и жесткие виды анкерных конструкций.  
@@ -54,10 +54,10 @@ permalink: /стационарные-страховочные-системы
 
 ![](/img/sss/3m.jpg){:class="uk-align-left uk-width-1-2"}
 **При расчете анкерной линии необходимо учитывать:**  
-•	габариты сооружения, на котором будет проводиться работа;  
-•	количество задействованных работников;  
-•	возможность для работников свободно передвигаться;  
-•	особенности условий работы.
+*	габариты сооружения, на котором будет проводиться работа;  
+*	количество задействованных работников;  
+*	возможность для работников свободно передвигаться;  
+*	особенности условий работы.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 
