--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -22,11 +22,11 @@ permalink: /анкерная-линия-GORIZONT
 ### **Преимущества системы**  
 ![](/img/sss/3.2.1.gif)
  
-•	Установка анкерной линии при факторе падения 0, 1, 2;  
-•	До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
-•	Возможен монтаж с любым шагом установки промежуточных анкеров (до 12 м). Доступны также готовые «пакетные решения»: 12, 24, 36, 48, 60, 72 и 84 метров линии;  
-•	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
-•	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6).
+*	Установка анкерной линии при факторе падения 0, 1, 2;  
+*	До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
+*	Возможен монтаж с любым шагом установки промежуточных анкеров (до 12 м). Доступны также готовые «пакетные решения»: 12, 24, 36, 48, 60, 72 и 84 метров линии;  
+*	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
+*	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6).
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
  
@@ -39,9 +39,9 @@ permalink: /анкерная-линия-GORIZONT
 
 ![](/img/sss/3.FHL102.gif){:class="uk-align-left uk-width-1-3"}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL102)  
-•  Возможность свободного перемещения по всей длине анкерной линии.  
-•  Дополнительная точка опоры.  
-•  Возможность установки на стенах зданий, крышах и кровлях.  
+*  Возможность свободного перемещения по всей длине анкерной линии.  
+*  Дополнительная точка опоры.  
+*  Возможность установки на стенах зданий, крышах и кровлях.  
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
   
