--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -21,12 +21,12 @@ permalink: /анкерная-линия-MOST
 ![](/img/sss/3.3.1.1.png)
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-• Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6 (взрывозащита: IIC Ga T6).  
-• До 3-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}    
-• Возможность монтажа на любой высоте - над головой, на уровне плеч, на уровне ног.  
-• Подходит для работы в безопорном пространстве (работы в висе/ положении сидя).  
-• Исполнение в двух цветовых вариантах (серебристый; черный).  
-• Система анодирована, что позволяет повысить ее прочность и продлить срок службы. 
+* Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6 (взрывозащита: IIC Ga T6).  
+* До 3-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}    
+* Возможность монтажа на любой высоте - над головой, на уровне плеч, на уровне ног.  
+* Подходит для работы в безопорном пространстве (работы в висе/ положении сидя).  
+* Исполнение в двух цветовых вариантах (серебристый; черный).  
+* Система анодирована, что позволяет повысить ее прочность и продлить срок службы. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Состав системы**
