--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -46,9 +46,9 @@ permalink: /анкерная-линия-PEREPRAVA
 
 ![](/img/sss/3.FHL402.gif){:class="uk-align-left uk-width-1-3"}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL402)
-•  Возможность свободного перемещения по всей длине анкерной линии.  
-•  Дополнительная точка опоры.  
-•  Возможность установки на стенах зданий или под потолок.  
+*  Возможность свободного перемещения по всей длине анкерной линии.  
+*  Дополнительная точка опоры.  
+*  Возможность установки на стенах зданий или под потолок.  
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
