--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -35,8 +35,8 @@ permalink: /инструменты
 
 **Применение:**
 
-•	Для оперативной проверки однородности сварных соединений пластиковых конструкций в химической промышленности и трубных системах;  
-•	Для проверки качества сварочного шва при экструзионной сварке полимерных геомембран.
+*	Для оперативной проверки однородности сварных соединений пластиковых конструкций в химической промышленности и трубных системах;  
+*	Для проверки качества сварочного шва при экструзионной сварке полимерных геомембран.
 
 ### **МТ-2007 магнитный толщиномер покрытий**
 {: .uk-text-center}
@@ -46,11 +46,11 @@ permalink: /инструменты
 
 Магнитный толщиномер покрытий МТ-2007 предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
 
-•	Измерение толщины покрытия на магнитных основаниях в широком диапазоне от 2 до 30 000 мкм  
-•	Измерение толщины ржавчины на стали, в том числе и на внутренних стенках труб (при использовании специализированных преобразователей)  
-•	Измерение толщины гальванических (цинковых, хромовых, кадмиевых, серебряных и других) покрытий на магнитных основаниях (сталь и т.д.)  
-•	Проведение как локальных измерений (в конкретном месте), так и непрерывных измерений - режим сканирования, при этом оператор имеет возможность оценить распределение нанесения покрытия на металл непосредственно в каждой точке сканирования  
-•	Функция вычисления среднего арифметического значения и среднеквадратичного отклонения, при этом оператору достаточно провести измерение минимум в трех точках для определения равномерности нанесения покрытия  
+*	Измерение толщины покрытия на магнитных основаниях в широком диапазоне от 2 до 30 000 мкм  
+*	Измерение толщины ржавчины на стали, в том числе и на внутренних стенках труб (при использовании специализированных преобразователей)  
+*	Измерение толщины гальванических (цинковых, хромовых, кадмиевых, серебряных и других) покрытий на магнитных основаниях (сталь и т.д.)  
+*	Проведение как локальных измерений (в конкретном месте), так и непрерывных измерений - режим сканирования, при этом оператор имеет возможность оценить распределение нанесения покрытия на металл непосредственно в каждой точке сканирования  
+*	Функция вычисления среднего арифметического значения и среднеквадратичного отклонения, при этом оператору достаточно провести измерение минимум в трех точках для определения равномерности нанесения покрытия  
    
 ### **Тепловизор Testo 865**
 {: .uk-text-center}
