--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -30,8 +30,8 @@ permalink: /анкерная-линия-GALEREYA
 * Установка под потолком на любой высоте от пользователя.  
 * Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6).   
 
-{% include i-sect-end-start.html sectclass="uk-section-muted" %}
-## **Состав системы**
+
+### **Состав системы**
 
 ![](/img/sss/3.FHL201.gif){:class="uk-align-left uk-width-1-3"}
 #### **Мобильная анкерная точка** (арт. FHL201) 
@@ -80,8 +80,6 @@ permalink: /анкерная-линия-GALEREYA
 #### **Трос анкерной линии** (арт. SSR001)  
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
-
-{% include i-sect-end-start.html %}
 
 
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
