--- a/6.0_contacts.md
+++ b/6.0_contacts.md
@@ -8,27 +8,31 @@ permalink: /contacts
 ---
 
 Позвоните нам сейчас, и наши специалисты помогут Вам.
-<address>
-<span uk-icon="receiver" class="uk-text-primary"></span> Наши телефоны:
-{% for p in site.data.var.phones %}
-    <a href="tel:{{ p }}">{{ p }}</a>
-    {%- unless forloop.last -%},&#32;{%- endunless -%}
-{% endfor %}<br/>
+<ul class="uk-list uk-list-striped">
+<li>
+    <span uk-icon="receiver" class="uk-text-primary"></span> Наши телефоны:
+    {% for p in site.data.var.phones %}
+        <a href="tel:{{ p }}">{{ p }}</a>
+        {%- unless forloop.last -%},&#32;{%- endunless -%}
+    {% endfor %}
+</li>
 
 {% for s in site.data.var.contacts %}
-    {%- if s[1].icon -%}
-        <span uk-icon="{{ s[1].icon }}" class="uk-text-primary"></span>&nbsp;
-    {%- endif -%}    
-    {{ s[1].label }}:&nbsp;
-    {%- if s[1].link -%}
-        <a href="{{ s[1].link }}" target="_blank">
-    {%- endif -%}
-    {{ s[1].val }}
-    {%- if s[1].link -%}
-        </a>
-    {%- endif -%}
-    <br/>
+    <li>
+        {%- if s[1].icon -%}
+            <span uk-icon="{{ s[1].icon }}" class="uk-text-primary"></span>&nbsp;
+        {%- endif -%}    
+        {{ s[1].label }}:&nbsp;
+        {%- if s[1].link -%}
+            <a href="{{ s[1].link }}" target="_blank">
+        {%- endif -%}
+        {{ s[1].val }}
+        {%- if s[1].link -%}
+            </a>
+        {%- endif -%}
+    </li>
 {% endfor %}
+</ul>
 
 {% comment %}
 <span uk-icon="commenting" class="uk-text-primary"></span> Напишите нам: <a href="mailto:{{ site.data.var.email }}">{{ site.data.var.email }}</a><br/>
