--- a/404.md
+++ b/404.md
@@ -5,5 +5,5 @@ submenu: false
 layout: uni
 ---
 
-<h1 class="uk-heading-xlarge">404</h1>
-<h1 class="">Перейти на <a href="{% link index.md %}">главную страницу</a></h1>
+<h1 class="uk-heading-xlarge uk-text-center">404</h1>
+<h1 class="uk-text-center">Перейти на <a href="{% link index.md %}">главную страницу</a></h1>
