![](img) ---> {% include el-img.html}

--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -36,7 +36,7 @@ permalink: /фасады
 
 
 ### **Что вам даст обследование фасада.**  
-![](/img/0/1.2.8.jpg){:class="uk-align-left uk-width-1-3"}  
+{% include el-img.html name="0/1.2.8.jpg" align="left" width="1/3" %}  
 1. Достоверную информацию, на основании которой вы будете принимать решения.
 2. Заключение который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.
 3. Ценную информацию для формирования технического задания.
@@ -46,7 +46,7 @@ permalink: /фасады
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Какие документы получаем по окончанию обследования.**  
-![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}  
+{% include el-img.html name="0/1.2.9.jpg" align="left" width="1/3" %}  
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.  
 * Техническое заключение составляется согласно __ГОСТ 31937-2011.__  
 * В которые входят данные осмотра, фото и видео материалы.  
