--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -52,7 +52,7 @@ permalink: /стационарные-страховочные-системы
 ### **Монтаж анкерных линий**    
 Если Вы планируете **монтаж анкерных линий,** то прежде всего нужно определиться с их комплектацией. Помимо несущих тросов или рельс и страховочных частей в анкерных линиях должны присутствовать монтажные крепежные элементы и другие дополнительные устройства.
 
-![](/img/sss/3m.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="sss/3m.jpg" align="left" width="1/2" %}
 **При расчете анкерной линии необходимо учитывать:**  
 *	габариты сооружения, на котором будет проводиться работа;  
 *	количество задействованных работников;  
