--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -11,7 +11,7 @@ permalink: /анкерная-линия-GORIZONT
 {% include el-slider.html  %}
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.2.0.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="toplogo/3.2.0.jpg" align="left" width="1/2" %}
 
 Горизонтальная гибкая анкерная линия **GORIZONT** компании **HIGH SAFETY** - наиболее простое и доступное решение для организации безопасной работы на высоте на любых типах горизонтальных поверхностей (чистка крыш, кровельные работы) на уровне пояса или над головой. 
 
@@ -22,7 +22,7 @@ permalink: /анкерная-линия-GORIZONT
 
 
 ### **Преимущества системы**  
-![](/img/sss/3.2.1.gif)
+{% include el-img.html name="sss/3.2.1.gif"  %}
  
 *	Установка анкерной линии при факторе падения 0, 1, 2;  
 *	До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
@@ -33,13 +33,13 @@ permalink: /анкерная-линия-GORIZONT
 
  
 ### **Состав системы**
-![](/img/sss/3.FHL101.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL101.gif" align="left" width="1/3" %}
 #### **Мобильная анкерная точка, гальв. сталь** (FHL101)
 Обеспечивает беспрепятственное прохождение промежуточных анкерных точек анкерной линии без необходимости отсоединения троса.   
 **Материал:** гальв. сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL102.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL102.gif" align="left" width="1/3" %}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL102)  
 *  Возможность свободного перемещения по всей длине анкерной линии.  
 *  Дополнительная точка опоры.  
@@ -47,43 +47,43 @@ permalink: /анкерная-линия-GORIZONT
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
   
-![](/img/sss/3.FHL103.gif){:class="uk-align-left uk-width-1-3"}  
+{% include el-img.html name="sss/3.FHL103.gif" align="left" width="1/3" %}  
 #### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL103)
 Используется при установке линии на анкерные столбы.   
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL104.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL104.gif" align="left" width="1/3" %}
 #### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL104)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL105.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL105.gif" align="left" width="1/3" %}
 #### **Амортизирующее устройство** (FHL105)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL106.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL106.gif" align="left" width="1/3" %}
 #### **Натяжитель для троса** (FHL106)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL107.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL107.gif" align="left" width="1/3" %}
 #### **Промежуточный структурный анкер угловой** (FHL107)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.ZG002.gif" align="left" width="1/3" %}
 #### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.SSR001.gif" align="left" width="1/3" %}
 #### **Трос из нержавеющей стали** (SSR001) 
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
