--- a/3.4_VERTIKAL.md
+++ b/3.4_VERTIKAL.md
@@ -9,7 +9,7 @@ permalink: /анкерная-линия-VERTIKAL
 {% include el-slider.html  nimg = "3" %} 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.4.0.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="toplogo/3.4.0.jpg" align="left" width="1/2" %}
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
@@ -33,9 +33,9 @@ permalink: /анкерная-линия-VERTIKAL
  
  
 ### **Состав вертикальной жесткой анкерной линии:**
-![](/img/sss/3.4.1.jpg)
+{% include el-img.html name="sss/3.4.1.jpg"  %}
 
-![](/img/sss/3.RVL101.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RVL101.gif" align="left" width="1/3" %}
 #### **Перемещаемое средство защиты ползункового типа (захват)** (арт. RVL101)
 Обеспечивает сободное перемещение по вертикальной лестнице при подъёме/спуске.   
 Автоматически блокируется на анкерной линии при падении.  
@@ -43,9 +43,9 @@ permalink: /анкерная-линия-VERTIKAL
 **Материал:** нержавеющая сталь.  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RVL102.0.jpg)
+{% include el-img.html name="sss/3.RVL102.0.jpg"  %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
-![](/img/sss/3.RVL102.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RVL102.gif" align="left" width="1/3" %}
 #### **Верхний структурный анкер с амортизирующим устройством** (арт. RVL102)
 Амортизатор закрытого типа оснащеный индикатором падения/натяжения встроен в верхний структурный анкер.   
 Цветовая маркировка на оси амортизатора облегчает визуальный контроль натяжения троса анкерной линии, а также помогает с легкостью идентифицировать факт останова падения.   
@@ -53,7 +53,7 @@ permalink: /анкерная-линия-VERTIKAL
 **Материал:** нержавеющая сталь.    
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.RVL103.gif){:class="uk-align-left uk-width-1-3"} 
+{% include el-img.html name="sss/3.RVL103.gif" align="left" width="1/3" %} 
 #### **Верхний структурный анкер с элементом крепления** (арт. RVL103)
 Простой и быстрый монтаж как специалистами нашей компанией, так и собственными силами Заказчика.     
 Защита креплений - антивандальное исполнение.    
@@ -61,28 +61,28 @@ permalink: /анкерная-линия-VERTIKAL
 **Материал:** нержавеющая сталь. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RVL104.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RVL104.gif" align="left" width="1/3" %}
 #### **Верхняя удлиняющая планка** (арт. RVL104)
 Обеспечивает страховку пользователя  при выходе на рабочую площадку.    
 **Длина:** 1 300 мм.  
 **Материал:** нержавеющая сталь. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RVL105.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RVL105.gif" align="left" width="1/3" %}
 #### **Нижний структурный анкер с элементом крепления и элементом натяжения** (арт. RVL105)
 Защита креплений - антивандальное исполнение.    
 Индикатор натяжения исключает возможность ошибки при монтаже.    
 **Материал:** нержавеющая сталь. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RVL106.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RVL106.gif" align="left" width="1/3" %}
 #### **Держатель троса** (арт. RVL106)
 Устанавливается на протяжении всей длины анкерной линии через каждые 7 метров.   
 Легко монтируется к конструкции существующей лестницы обжимным методом.     
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.SSR001.gif" align="left" width="1/3" %}
 #### **Трос диаметром 8 мм** (арт. SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность системы.   
 Натяжение троса происходит с помощью специального ключа, который входит в комплект поставки.  
