--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -9,7 +9,7 @@ permalink: /анкерные-столбы
 {% include el-slider.html  nimg = "3" %} 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.6.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="toplogo/3.6.jpg" align="left" width="1/2" %}
 
 **HIGH SAFETY** предлагает широкий ассортимент анкерных столбов, используемых как в качестве самостоятельных анкерных точек, так и для монтажа на них горизонтальных анкерных линий.  
 По желанию заказчика возможно исполнение изделия с любым покрытием: горячее цинкование, гальваника, покраска эмалью, порошковая покраска. 
@@ -18,7 +18,7 @@ permalink: /анкерные-столбы
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.AP-2h.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.AP-2h.jpg" align="left" width="1/3" %}
 ### **Анкерный столб, круглый** (арт. AP-2h)
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.   
 На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.    
@@ -31,7 +31,7 @@ permalink: /анкерные-столбы
 **Статическая прочность:** мин. 24 кН  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-4h.jpg){:class="uk-align-left uk-width-1-3"} 
+{% include el-img.html name="sss/3.AP-4h.jpg" align="left" width="1/3" %} 
 #### **Анкерный столб, боковое крепление** (арт. AP-4h)  
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа охватом на несущие балки конструкции (например, подкровельные).       
@@ -43,7 +43,7 @@ permalink: /анкерные-столбы
 **Размер балки:** высота 120 - 780 мм, ширина - до 300 мм
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-8h.jpg){:class="uk-align-left uk-width-1-3"} 
+{% include el-img.html name="sss/3.AP-8h.jpg" align="left" width="1/3" %} 
 #### **Анкерный столб, многогранный** (арт. AP-8h)  
 
 Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров.   
@@ -54,7 +54,7 @@ permalink: /анкерные-столбы
 **Статическая прочность:** 24 кН  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-T200.jpg){:class="uk-align-left uk-width-1-3"} 
+{% include el-img.html name="sss/3.AP-T200.jpg" align="left" width="1/3" %} 
 #### **Анкерный столб "ТИТАН 200"** (арт. AP-T200)  
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.   
@@ -67,7 +67,7 @@ permalink: /анкерные-столбы
 **Статическая прочность:** мин. 24 кН
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-T200b.jpg){:class="uk-align-left uk-width-1-3"} 
+{% include el-img.html name="sss/3.AP-T200b.jpg" align="left" width="1/3" %} 
 #### **Анкерный столб "ТИТАН 200 b"** (арт. AP-T200b)
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.       
@@ -79,7 +79,7 @@ permalink: /анкерные-столбы
 **Статическая прочность:** мин. 24 кН
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-S200.jpg){:class="uk-align-left uk-width-1-3"} 
+{% include el-img.html name="sss/3.AP-S200.jpg" align="left" width="1/3" %} 
 #### **Анкерный столб AP-S200** (арт. AP-S200)
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.   
@@ -92,7 +92,7 @@ permalink: /анкерные-столбы
 **Статическая прочность:** мин. 24 кН  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-S200b.jpg){:class="uk-align-left uk-width-1-3"}  
+{% include el-img.html name="sss/3.AP-S200b.jpg" align="left" width="1/3" %}  
 #### **Анкерный столб AP-S200b** (арт. AP-S200b)
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.        
@@ -103,7 +103,7 @@ permalink: /анкерные-столбы
 **Статическая прочность:** мин. 24 кН  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.AP-R10.jpg){:class="uk-align-left uk-width-1-3"}  
+{% include el-img.html name="sss/3.AP-R10.jpg" align="left" width="1/3" %}  
 #### **Анкерный столб для кровли** (арт. AP-R10)
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.).   
