--- a/7.1.2.2_final_step.md
+++ b/7.1.2.2_final_step.md
@@ -19,8 +19,8 @@ permalink: /завершающий-этап-проверки-крыш
 
 
 #### Карта дефектов на кровле:
-![](/img/evk/KDK.001.png)
-![](/img/evk/KDK.002.png)
-![](/img/evk/KDK.003.png)
-![](/img/evk/KDK.004.png)
+{% include el-img.html name="evk/KDK.001.png"  %}
+{% include el-img.html name="evk/KDK.002.png"  %}
+{% include el-img.html name="evk/KDK.003.png"  %}
+{% include el-img.html name="evk/KDK.004.png"  %}
 
