--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -15,8 +15,8 @@ permalink: /инструменты
 Найдите протечки крыши в условиях влажной погоды
 {: .uk-text-center}
 
-![](/img/Instrument/EVK.01.png){:class="uk-align-left uk-width-1-3"}
-![](/img/Instrument/EVK.02.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="Instrument/EVK.01.png" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/EVK.02.jpg" align="left" width="1/3" %}
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
@@ -29,8 +29,8 @@ permalink: /инструменты
 ### **PST-100 искровой тестер**
 {: .uk-text-center}
  
-![](/img/Instrument/PST100.01.png){:class="uk-align-left uk-width-1-3"}
-![](/img/Instrument/PST100.02.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="Instrument/PST100.01.png" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/PST100.02.jpg" align="left" width="1/3" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 **Применение:**
@@ -40,8 +40,8 @@ permalink: /инструменты
 
 ### **МТ-2007 магнитный толщиномер покрытий**
 {: .uk-text-center}
-![](/img/Instrument/МТ2007.01.jpg){:class="uk-align-left uk-width-1-3"}
-![](/img/Instrument/МТ2007.02.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="Instrument/МТ2007.01.jpg" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/МТ2007.02.jpg" align="left" width="1/3" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Магнитный толщиномер покрытий МТ-2007 предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
@@ -54,8 +54,8 @@ permalink: /инструменты
    
 ### **Тепловизор Testo 865**
 {: .uk-text-center}
-![](/img/Instrument/Testo865.01.png){:class="uk-align-left uk-width-1-3"}
-![](/img/Instrument/Testo865.02.png){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="Instrument/Testo865.01.png" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/Testo865.02.png" align="left" width="1/3" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Тепловизор testo 865 – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
@@ -69,8 +69,8 @@ permalink: /инструменты
      
 ### **Склерометр Easy Beton CONDTROL**
 {: .uk-text-center}
-![](/img/Instrument/EasyBeton.01.jpg){:class="uk-align-left uk-width-1-3"}
-![](/img/Instrument/EasyBeton.02.png){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="Instrument/EasyBeton.01.jpg" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/EasyBeton.02.png" align="left" width="1/3" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Измеритель прочности Beton Easy CONDTROL предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
@@ -84,8 +84,8 @@ permalink: /инструменты
    
 ### **Набор НТЦ Эксперт ВИК Поверенный**
 {: .uk-text-center}
-![](/img/Instrument/vik.01.jpg){:class="uk-align-left uk-width-1-3"}
-![](/img/Instrument/vik.02.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="Instrument/vik.01.jpg" align="left" width="1/3" %}
+{% include el-img.html name="Instrument/vik.02.jpg" align="left" width="1/3" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Набор НТЦ Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
