--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -12,7 +12,7 @@ permalink: /диагностика-кровли
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **1. Нахождение мест протечек мембранной кровли.**  
-![](/img/0/1.2.1.jpg)   
+{% include el-img.html name="0/1.2.1.jpg"  %}   
 
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 7.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
  Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места повреждений покрытия.     
@@ -27,29 +27,29 @@ permalink: /диагностика-кровли
 * **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**  
 * **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**  
 
-![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **2. Нахождение мест протечек листовых и мягких кровель.**  
-![](/img/0/1.2.2.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="0/1.2.2.jpg" align="left" width="1/2" %}
 *    Визуальное обследование, нахождение причин протечек.   
 *    Инструментальное обследование, которое выполняется после и на основании визуального осмотра.
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **3. Качество монтажа кровельных материалов.**  
-![](/img/0/1.2.3.6.jpg){:class="uk-align-left uk-width-1-2"}  
+{% include el-img.html name="0/1.2.3.6.jpg" align="left" width="1/2" %}  
 
 Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **4. Определение мест утечки тепла.**  
-![](/img/0/1.2.4.jpg){:class="uk-align-left uk-width-1-2"}     
+{% include el-img.html name="0/1.2.4.jpg" align="left" width="1/2" %}     
 
 Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **5. Опорные металлические конструкции.**  
-![](/img/0/1.2.5.jpg)    
+{% include el-img.html name="0/1.2.5.jpg"  %}    
 Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
 
 Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
@@ -61,7 +61,7 @@ permalink: /диагностика-кровли
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **7. Деревянная конструкция кровли.**
-![](/img/0/1.2.7.jpg)    
+{% include el-img.html name="0/1.2.7.jpg"  %}    
 
 Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
 
@@ -75,7 +75,7 @@ permalink: /диагностика-кровли
 
 
 ### **Что вам даст обследование кровли.**
-![](/img/0/1.2.8.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="0/1.2.8.jpg" align="left" width="1/3" %}
 1. Достоверную информацию, на основании которой вы будете принимать решения.  
 2. Ценную информацию для формирования технического задания.  
 3. На основании полученной информации можно планировать дальнейшую работу.   
@@ -88,7 +88,7 @@ permalink: /диагностика-кровли
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ### **Какие документы получаем по окончанию обследования.**
-![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="0/1.2.9.jpg" align="left" width="1/3" %}
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__ который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.
 
 Техническое заключение составляется согласно __ГОСТ 31937-2011.__    
