--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -12,7 +12,7 @@ permalink: /анкерная-линия-GALEREYA
 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.1.0.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="toplogo/3.1.0.jpg" align="left" width="1/2" %}
 
 Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
 
@@ -23,7 +23,7 @@ permalink: /анкерная-линия-GALEREYA
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Преимущества системы**
-![](/img/sss/3.1.1.jpg)
+{% include el-img.html name="sss/3.1.1.jpg"  %}
  
 * Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии.   
 * До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}.   
@@ -33,50 +33,50 @@ permalink: /анкерная-линия-GALEREYA
 
 ### **Состав системы**
 
-![](/img/sss/3.FHL201.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL201.gif" align="left" width="1/3" %}
 #### **Мобильная анкерная точка** (арт. FHL201) 
 Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии.  
 Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL205.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL205.gif" align="left" width="1/3" %}
 #### **Амортизирующее устройство** (арт. FHL205)  
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже.   
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL202.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL202.gif" align="left" width="1/3" %}
 #### **Промежуточный структурный анкер** (арт.FHL202)
 Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
-![](/img/sss/3.FHL206.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL206.gif" align="left" width="1/3" %}
 #### **Натяжитель для троса** (арт. FHL206)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL203.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL203.gif" align="left" width="1/3" %}
 #### **Ролик-натяжитель** (арт. FHL203) 
 Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.  
 **Материал:** нержавеющая сталь, высоко прочный пластик
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL207.png){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL207.png" align="left" width="1/3" %}
 #### **Крайний структурный анкер, нерж.сталь** (арт. FHL207) 
 Применяется для монтажа линии к элементам постоянной конструкции.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.ZG002.gif" align="left" width="1/3" %}
 #### **Цанговый зажим** (ZG002)  
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.SSR001.gif" align="left" width="1/3" %}
 #### **Трос анкерной линии** (арт. SSR001)  
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
