--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -8,7 +8,7 @@ permalink: /анкерная-линия-MOST
 {% include el-slider.html  nimg = "3" %} 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.3.0.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="toplogo/3.3.0.jpg" align="left" width="1/2" %}
 
 Горизонтальная жесткая анкерная линия **MOST** компании **HIGH SAFETY** - универсальное решение для всех видов работ: работа на автоцистернах и жд вагонах,- слив, налив, взятие проб, проведение замеров, работы на крыше, работы в положении сидя при обслуживании фасадов промышленных и городских зданий (торговых центров, жилых домов, бизнес-центров). 
 
@@ -18,7 +18,7 @@ permalink: /анкерная-линия-MOST
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ### **Преимущества системы**
-![](/img/sss/3.3.1.1.png)
+{% include el-img.html name="sss/3.3.1.1.png"  %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 * Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6 (взрывозащита: IIC Ga T6).  
@@ -31,7 +31,7 @@ permalink: /анкерная-линия-MOST
 
 #### **Состав системы**
 
-![](/img/sss/3.RHL301.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL301.gif" align="left" width="1/3" %}
 #### **Мобильная анкерная точка** (арт. RHL301)
 Имеет конструкцию, позволяющую использовать его совместно с различными типами карабинов - увеличенное кольцо для крепления.   
 Корпус анкерной точки (тележки) может быть выполнен как в серебристом цвете, так и в золотом, что позволяет легко обозначить его в условиях плохой видимости.    
@@ -39,7 +39,7 @@ permalink: /анкерная-линия-MOST
 **Материал:** алюминий. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RHL302.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL302.gif" align="left" width="1/3" %}
 #### **Сегмент анкерной направляющей** (арт. RHL302)
 Сегмент анкерной направляющей имеет длину 1, 2 или 3 м.   
 Благодаря этому возможна установка на любую длину и геометрию.   
@@ -47,14 +47,14 @@ permalink: /анкерная-линия-MOST
 **Материал:** алюминий.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RHL303.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL303.gif" align="left" width="1/3" %}
 #### **Соединитель сегментов** (арт. RHL303)
 Предназначен для соединения рельсовых сегментов жесткой анкерной линии.   
 Устанавливается на стыке сегментов для надежного соединения участков линии.     
 **Материал:** алюминий. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RHL304.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL304.gif" align="left" width="1/3" %}
 #### **Концевой ограничитель** (арт. RHL304)
 Концевой ограничитель устанавливается по краям линии (по одному с каждого конца).   
 Предназначен для предотвращения случайного соскальзывания мобильной анкерной точки (тележки) с рельсовго сегмента.   
@@ -62,21 +62,21 @@ permalink: /анкерная-линия-MOST
 **Материал:** алюминий. 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RHL305.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL305.gif" align="left" width="1/3" %}
 #### **Держатель сегментов** (арт. RHL305)
 Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов).   
 Предназначен для крепления анкерной линии к элементам постоянной конструкции.     
 **Материал:** алюминий.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RHL306.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL306.gif" align="left" width="1/3" %}
 #### **Структурный анкер с крепление одним болтом/ двумя болтами** (арт. RHL 306/RHL307)
 Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов).   
 Предназначен для крепления анкерной линии к элементам постоянной конструкции.     
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.RHL308.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.RHL308.gif" align="left" width="1/3" %}
 #### **Шкант для соединения сегментов** (арт. RHL308)
 Используется при соединении рельсовых сегментов на стыке участков.   
 **Материал:** нержавеющая сталь.
