--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -9,7 +9,7 @@ permalink: /анкерная-линия-PEREPRAVA
 {% include el-slider.html  nimg = "3" %} 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.5.0.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="toplogo/3.5.0.jpg" align="left" width="1/2" %}
 
 Горизонтальная гибкая анкерная линия **PEREPRAVA** компании **HIGH SAFETY** - универсальное решение для организации безопасной работы на высоте на горизонтальных поверхностях (монтаж к стене или под потолок). Может быть установлена на любой высоте (фактор падения 0). Незаменима при организации страховочной системы на подкрановых путях. 
 
@@ -19,7 +19,7 @@ permalink: /анкерная-линия-PEREPRAVA
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
 ### **Преимущества системы**  
-![](/img/sss/3.5.1.jpg)
+{% include el-img.html name="sss/3.5.1.jpg"  %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
 -	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
@@ -37,14 +37,14 @@ permalink: /анкерная-линия-PEREPRAVA
 ### **Состав системы**
  
 #### **Мобильная анкерная точка, нерж. сталь** (FHL401)
-![](/img/sss/3.FHL401.1.1.gif)
+{% include el-img.html name="sss/3.FHL401.1.1.gif"  %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 Обеспечивает беспрепятственное прохождение промежуточных точек анкерной линии на любой высоте установки при факторе падения 0.  
 Совместима с любыми типами СИЗ втягивающего типа.    
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL402.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL402.gif" align="left" width="1/3" %}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL402)
 *  Возможность свободного перемещения по всей длине анкерной линии.  
 *  Дополнительная точка опоры.  
@@ -52,43 +52,43 @@ permalink: /анкерная-линия-PEREPRAVA
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-![](/img/sss/3.FHL403.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL403.gif" align="left" width="1/3" %}
 #### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL403)
 Используется при установке линии на анкерные столбы.   
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.FHL404.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL404.gif" align="left" width="1/3" %}
 #### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL404)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.FHL405.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL405.gif" align="left" width="1/3" %}
 #### **Амортизирующее устройство** (FHL405)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
   
-![](/img/sss/3.FHL406.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL406.gif" align="left" width="1/3" %}
 #### **Натяжитель для троса** (FHL406)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.FHL407.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.FHL407.gif" align="left" width="1/3" %}
 #### **Промежуточный структурный анкер угловой** (FHL407)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
    
-![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.ZG002.gif" align="left" width="1/3" %}
 #### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="sss/3.SSR001.gif" align="left" width="1/3" %}
 #### **Трос из нержавеющей стали** (SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
