--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -12,7 +12,7 @@ permalink: /электро-векторное-картирование
 Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
 ### Тестирование Мембраны Плоской Крыши
-![](/img/evk/EVK.006.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.006.jpg" align="left" width="1/2" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 #### Испытания Плоских Кровельных Материалов
 
@@ -25,12 +25,12 @@ permalink: /электро-векторное-картирование
 В настоящее время подавляющее большинство плоских крыш построено из электропроводящих материалов, таких как сталь или бетон, и многие из них имеют фольгированный изоляционный слой непосредственно под поверхностной мембраны. **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства этих материалов, для того чтобы обнаружить местонахождение протечки путем пропускания тока через дефекты к Земле.
 
 ### Типичная однослойная плоская конструкция крыши
-![](/img/evk/EVK.007.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.007.jpg" align="left" width="1/2" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 *Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
 ### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
-![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
 Найдите протечки крыши в условиях влажной погоды
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
@@ -39,14 +39,14 @@ permalink: /электро-векторное-картирование
 
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
-![](/img/evk/EVK.002.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.002.jpg" align="left" width="1/2" %}
 
 Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.
 Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.003.jpg" align="left" width="1/2" %}
 
 **Особенности:**
 * Тест до 400 м2 в день
@@ -73,8 +73,8 @@ permalink: /электро-векторное-картирование
 5)	Фотофиксация состояния кровли и найденных нарушений  
 6)	Рекомендации  
 #### Карта дефектов на кровле:
-![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
-![](/img/evk/KDK.002.png){:class="uk-align-left uk-width-1-2"}
-![](/img/evk/KDK.003.png){:class="uk-align-left uk-width-1-2"}
-![](/img/evk/KDK.004.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/KDK.001.png" align="left" width="1/2" %}
+{% include el-img.html name="evk/KDK.002.png" align="left" width="1/2" %}
+{% include el-img.html name="evk/KDK.003.png" align="left" width="1/2" %}
+{% include el-img.html name="evk/KDK.004.png" align="left" width="1/2" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
