--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -7,13 +7,13 @@ layout: buffer
 permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 ---
 
-![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.001.jpg" align="left" width="1/2" %}
 
 ## Мокрые Крыши Про
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
-![](/img/evk/EVK.002.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.002.jpg" align="left" width="1/2" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ` ` Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.  
 
@@ -21,7 +21,7 @@ permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 
 ` ` **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="evk/EVK.003.jpg" align="left" width="1/2" %}
 
 **Особенности**
 * Тест до 400 м2 в день  
@@ -41,7 +41,7 @@ permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 * Диапазон температур от +4°C до +40°C  
 
 
-![](/img/evk/EVK.004.jpg){:class="uk-align-left uk-width-1-3"}  
-![](/img/evk/EVK.009.png){:class="uk-align-left uk-width-1-3"}  
-![](/img/evk/EVK.005.jpg){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="evk/EVK.004.jpg" align="left" width="1/3" %}  
+{% include el-img.html name="evk/EVK.009.png" align="left" width="1/3" %}  
+{% include el-img.html name="evk/EVK.005.jpg" align="left" width="1/3" %}
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
