--- a/_portfolio/20191024.md
+++ b/_portfolio/20191024.md
@@ -5,7 +5,7 @@ description: Причины обследования протечки внутр
 title: Обследование мягкой кровли таунхаус
 ---
 
-![](/img/portfolio/20191024.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20191024.jpg" align="left" width="1/2" %}
 
 ### **Отчет по результатам проведенной работы:**
 **на комплекс работ по обследованию мягкой кровли таунхаус на предмет выявления причин протечек.  
@@ -27,7 +27,7 @@ title: Обследование мягкой кровли таунхаус
 5.	Составление технического заключения.
  
 #### **При визуальном обследовании кровли были выявлены и зафиксированы дефекты, повреждения, нарушения:**
-![](/img/portfolio/20191024/20191024.1.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20191024/20191024.1.jpg" align="left" width="1/2" %}
 #### 1.	Повреждение конькового элемента.
 
   
@@ -35,29 +35,29 @@ title: Обследование мягкой кровли таунхаус
 
 #### 2.	Отсутствует герметичных примыканий соединения кровельного покрытия к внешним выходам вентиляционных труб.  
 
-![](/img/portfolio/20191024/20191024.2.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.3.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.4.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.5.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.6.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.7.png){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="portfolio/20191024/20191024.2.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.3.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.4.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.5.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.6.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.7.png" align="left" width="1/3" %}
 
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### 3.	Не выполненная герметизация металлического отлива к облицовке фасада.
 
-![](/img/portfolio/20191024/20191024.8.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.9.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.10.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.11.png){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="portfolio/20191024/20191024.8.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.9.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.10.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.11.png" align="left" width="1/3" %}
    
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### 4.	При обследовании чердачного помещения было обнаружено, что диффузионная мембрана частично срезана и вентиляционный продух герметично закрыт. Из-за этого отвод пара и конденсата не происходит. 
 
-![](/img/portfolio/20191024/20191024.12.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.13.png){:class="uk-align-left uk-width-1-3"}
-![](/img/portfolio/20191024/20191024.14.png){:class="uk-align-left uk-width-1-3"}
+{% include el-img.html name="portfolio/20191024/20191024.12.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.13.png" align="left" width="1/3" %}
+{% include el-img.html name="portfolio/20191024/20191024.14.png" align="left" width="1/3" %}
   
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
