--- a/_portfolio/20200123.md
+++ b/_portfolio/20200123.md
@@ -5,7 +5,7 @@ description: Причины обследования протечка внутр
 title: Обследование кровельного покрытия
 ---
 
-![](/img/portfolio/20200123/20200123.1.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.1.png" align="left" width="1/2" %}
 
  
 
@@ -39,20 +39,20 @@ title: Обследование кровельного покрытия
 - Были зафиксированы и проанализированы все нарушения.  
 
 #### **Существующий кровельный пирог:**
-![](/img/portfolio/20200123/20200123.2.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.2.jpg" align="left" width="1/2" %}
 
  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Размеры и уклоны крыши:**
 
-![](/img/portfolio/20200123/20200123.3.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.3.jpg" align="left" width="1/2" %}
 
  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **1. Уклоны кровельных скатов** 
-![](/img/portfolio/20200123/20200123.4.jpg){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.4.jpg" align="left" width="1/2" %}
 
  
 **Комментарий:**   
@@ -60,7 +60,7 @@ title: Обследование кровельного покрытия
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **2. Водоотвод**
-![](/img/portfolio/20200123/20200123.5.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.5.png" align="left" width="1/2" %}
 
  
 **Комментарий:**   
@@ -69,7 +69,7 @@ title: Обследование кровельного покрытия
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **3. Вентиляция кровли**
-![](/img/portfolio/20200123/20200123.6.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.6.png" align="left" width="1/2" %}
 
  
 **Комментарий:**   
@@ -81,34 +81,34 @@ title: Обследование кровельного покрытия
 СП 17.13330.2017 п. 7.2. - ***Не соответствует***  
 Отсутствие эластичных герметизирующих составов.  
 #### **5. Целостность кровельного полотна**
-![](/img/portfolio/20200123/20200123.7.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.7.png" align="left" width="1/2" %}
 
  
 СП 17.13330.2017 - ***Не соответствует***
 Целостность кровельного покрытия нарушена вследствие пробития гвоздями для закрепления ремонтных материалов.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **6. Защитное ограждение на кровле**
-![](/img/portfolio/20200123/20200123.8.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.8.png" align="left" width="1/2" %}
 
 СП 56.13330.2011 п. 5.3.3 - ***Отсутствует***  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **7. Элементы для крепления страховочного троса**
-![](/img/portfolio/20200123/20200123.9.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.9.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 п. 4.8 – **Соответствует**  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **8. Шаг стропильных ног 1300-1500 мм.**
-![](/img/portfolio/20200123/20200123.91.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.91.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 - **Соответствует**  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **9. Шаг обрешетки 300 – 400 мм, доска обрешетки необрезная 25 мм.**
-![](/img/portfolio/20200123/20200123.92.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.92.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 - **Соответствует**  
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **10. Карнизный свес**
-![](/img/portfolio/20200123/20200123.93.png){:class="uk-align-left uk-width-1-2"}
+{% include el-img.html name="portfolio/20200123/20200123.93.png" align="left" width="1/2" %}
  
 СП 17.13330.2017 3.1.11 - ***Не соответствует***  
 Конструкция карнизного свеса не защищает стены от дождевой или талой воды.
