--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -44,7 +44,7 @@ permalink: /анкерная-линия-PEREPRAVA
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.FHL402.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL402.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL402)
 *  Возможность свободного перемещения по всей длине анкерной линии.  
 *  Дополнительная точка опоры.  
@@ -52,43 +52,43 @@ permalink: /анкерная-линия-PEREPRAVA
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.FHL403.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL403.gif" align="left" noshadow="1" width="1/3" %}
 #### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL403)
 Используется при установке линии на анкерные столбы.   
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-{% include el-img.html name="sss/3.FHL404.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL404.gif" align="left" noshadow="1" width="1/3" %}
 #### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL404)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 **Материал:** нержавеющая сталь.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-{% include el-img.html name="sss/3.FHL405.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL405.gif" align="left" noshadow="1" width="1/3" %}
 #### **Амортизирующее устройство** (FHL405)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
   
-{% include el-img.html name="sss/3.FHL406.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL406.gif" align="left" noshadow="1" width="1/3" %}
 #### **Натяжитель для троса** (FHL406)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-{% include el-img.html name="sss/3.FHL407.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL407.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер угловой** (FHL407)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
    
-{% include el-img.html name="sss/3.ZG002.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.ZG002.gif" align="left" noshadow="1" width="1/3" %}
 #### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
-{% include el-img.html name="sss/3.SSR001.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.SSR001.gif" align="left" noshadow="1" width="1/3" %}
 #### **Трос из нержавеющей стали** (SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
