--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -33,50 +33,50 @@ permalink: /анкерная-линия-GALEREYA
 
 ### **Состав системы**
 
-{% include el-img.html name="sss/3.FHL201.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL201.gif" noshadow="1" align="left" width="1/3" %}
 #### **Мобильная анкерная точка** (арт. FHL201) 
 Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии.  
 Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.FHL205.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL205.gif" align="left" noshadow="1" width="1/3" %}
 #### **Амортизирующее устройство** (арт. FHL205)  
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже.   
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.FHL202.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL202.gif" align="left" noshadow="1" width="1/3" %}
 #### **Промежуточный структурный анкер** (арт.FHL202)
 Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
-{% include el-img.html name="sss/3.FHL206.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL206.gif" align="left" noshadow="1" width="1/3" %}
 #### **Натяжитель для троса** (арт. FHL206)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.FHL203.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL203.gif" align="left" noshadow="1" width="1/3" %}
 #### **Ролик-натяжитель** (арт. FHL203) 
 Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.  
 **Материал:** нержавеющая сталь, высоко прочный пластик
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.FHL207.png" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.FHL207.png" align="left" noshadow="1" width="1/3" %}
 #### **Крайний структурный анкер, нерж.сталь** (арт. FHL207) 
 Применяется для монтажа линии к элементам постоянной конструкции.   
 **Материал:** нержавеющая сталь
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.ZG002.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.ZG002.gif" align="left" noshadow="1" width="1/3" %}
 #### **Цанговый зажим** (ZG002)  
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
-{% include el-img.html name="sss/3.SSR001.gif" align="left" width="1/3" %}
+{% include el-img.html name="sss/3.SSR001.gif" align="left" noshadow="1" width="1/3" %}
 #### **Трос анкерной линии** (арт. SSR001)  
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
