--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -29,7 +29,7 @@ permalink: /стационарные-страховочные-системы
 3. Анкерная линия __[MOST]({% link 3.3_MOST.md %})__ \(Горизонтальная жесткая анкерная линия\)
 4. Анкерная линия __[VERTIKAL]({% link 3.4_VERTIKAL.md %})__ \(Вертикальная жесткая анкерная линия\)
 5. Анкерная линия __[PEREPRAVA]({% link 3.5_PEREPRAVA.md %})__ \(Горизонтальная гибкая анкерная линия\)
-6. __[Анкерные столбы]({% link 3.6_anchor_posts.md %})__ \(Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
+6. __[Анкерные столбы]({% link 3.6_anchor_posts.md %})__ \(Представляет собой анкерное устройство класса A и предназначено для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
 
 {% include el-slider.html  nimg = "5" %}
 
