--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ title: Страница не найдена
 main: false
 submenu: false
 layout: uni
+sitemap: false
 ---
 
 <h1 class="uk-heading-xlarge uk-text-center">404</h1>
